--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>GLOURIOS GIFTS</title>
 </head>
+
 <body>
-    <h1>Ankita</h1>
+    <nav id="navbar">
+
+
+        <div id="logo">
+            <img src="./images/logo.jpg" alt="MyOnlineMeal">
+        </div>
+        <h1>
+            GLOURIOS GIFTS
+        </h1>
+        <!-- <input type="text" class="search-bar" placeholder=""> -->
+
+
+
+    </nav>
 </body>
+
 </html>
