--- a/index.html
+++ b/index.html
@@ -13,17 +13,37 @@
     <nav id="navbar">
 
 
-        <div id="logo">
-            <img src="./images/logo.jpg" alt="MyOnlineMeal">
+        <div id="navbar-logo">
+            <img src="./images/logo.jpg" alt="GLOURIOS">
         </div>
         <h1>
             GLOURIOS GIFTS
         </h1>
-        <!-- <input type="text" class="search-bar" placeholder=""> -->
-
-
-
+        <div class="search-box">
+            <form>
+                <input type="text" name="search" placeholder="Search for gifts">
+            </form>
+        </div>
+        <div class="nav-items-container">
+            <a href="./index.html" class="nav-items">Home</a></li>
+            <a href="./pages/Aboutus.html" class="nav-items">About Us</a></li>
+            <a href="./pages/login.html" class="nav-items">Log in</a></li>
+        </div>
     </nav>
+
+    <div class="categories-container">
+         <div class="categories-items-container">
+            <a href="" class="categories-items">Valentine's Day</a></li>
+            <a href="" class="categories-items">Birthday</a></li>
+            <a href="" class="categories-items">Anniversary</a></li> 
+            <a href="" class="categories-items">Personalized</a></li>
+            <a href="" class="categories-items">Cakes</a></li>
+            <a href="" class="categories-items">Occasions</a></li>
+         </div> 
+
+    </div>
+
+
 </body>
 
 </html>
