--- a/pages/login.html
+++ b/pages/login.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
     
-    <title>Sign In Page</title>
-    <link rel="stylesheet" href="login.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="./../css/login.css">
+    <link rel="stylesheet" href="./../css/index.css">
 </head>
 <body>
+
+    <nav id="navbar">
+
+
+        <div id="navbar-logo">
+            <img src="./../images/logo.jpg" alt="GLOURIOS">
+        </div>
+        <h1>
+            GLOURIOS GIFTS
+        </h1>
+        <div class="search-box">
+            <form>
+                <input type="text" name="search" placeholder="Search for gifts">
+            </form>
+        </div>
+        <div class="nav-items-container">
+            <a href="./../index.html" class="nav-items">Home</a></li>
+            <a href="./../pages/Aboutus.html" class="nav-items">About Us</a></li>
+            <a href="./../pages/login.html" class="nav-items">Log in</a></li>
+        </div>
+    </nav>
    
   <div id='login-form'>
       <div class="form-box">
@@ -21,7 +43,7 @@
                 <input type='password'class='input-field'placeholder='Enter Password' required>
                 <input type='checkbox'class='check-box'><span>Remember Password</span>
                 <button type='submit'class='submit-btn'>Log in</button>
-                <a id="login-forget-password" href='#'>Forget Password?</a>
+                <a id="login-forget-password" href='#'>Forgot Password?</a>
             </form>
       </div>
   </div>
