--- a/pages/signup.html
+++ b/pages/signup.html
@@ -3,9 +3,31 @@
 <head>
    
     <title>Signup Page</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="./../css/signup.css">
+    <link rel="stylesheet" href="./../css/index.css">
 </head>
 <body>
+
+    <nav id="navbar">
+
+
+        <div id="navbar-logo">
+            <img src="./../images/logo.jpg" alt="GLOURIOS">
+        </div>
+        <h1>
+            GLOURIOS GIFTS
+        </h1>
+        <div class="search-box">
+            <form>
+                <input type="text" name="search" placeholder="Search for gifts">
+            </form>
+        </div>
+        <div class="nav-items-container">
+            <a href="./../index.html" class="nav-items">Home</a></li>
+            <a href="./../pages/Aboutus.html" class="nav-items">About Us</a></li>
+            <a href="./../pages/login.html" class="nav-items">Log in</a></li>
+        </div>
+    </nav>
     
     <div class="main">
         <div class="register">
