--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,6 +5,7 @@
     <title>Signup Page</title>
     <link rel="stylesheet" href="./../css/signup.css">
     <link rel="stylesheet" href="./../css/index.css">
+    <link rel="stylesheet" href="/css/footer.css">  
 </head>
 <body>
 
@@ -73,5 +74,63 @@
    
         </div> <!-- end register   -->
       </div> <!-- end main -->
+
+
+      <footer>
+        <div class="footer-container-main">
+            <div class="row">
+                <div class="footer-containers">
+                    <div class="foorte-logo-container">
+                        <img src="./../images/gg-type-logo.png" alt="gg-type-logo" class="footer-logo">
+                        <h1 class="footer-h1">Glorious Gift</h1>
+                    </div>
+                    
+                    <p class="footer-p"> A way of showing thoughtfulness, love and affection
+                        obcaecati.</p>
+                </div>
+                <div class="footer-containers">
+                    <ul class="footer-ul">
+                        <h1 class="footer-h1">Quick Links</h1>
+                        <li class="footer-li"><a href="./../index.html" class="footer-a">Home</a></li>
+                        <li class="footer-li"><a href="./../pages/login.html" class="footer-a">Login</a></li>
+                        <li class="footer-li"><a href="./../pages/Aboutus.html" class="footer-a">About</a></li>
+                        <li class="footer-li"><a href="#" class="footer-a">Contact</a></li>
+                    </ul>
+                </div>
+            
+                <div class="footer-containers">
+                    <ul class="footer-ul">
+                        <h1 class="footer-h1">Order</h1>
+                        <li class="footer-li"><a href="./pages/Anniversary.html" class="footer-a">Anniversary Gifts</a></li>
+                        <li class="footer-li"><a href="./pages/birthday.html" class="footer-a">Birthday Gifts</a></li>
+                        <li class="footer-li"><a href="./pages/Occasion.html" class="footer-a">Occasion Gifts</a></li>
+                        <li class="footer-li"><a href="./pages/Cakes.html" class="footer-a">Cakes</a></li>
+                    </ul>
+                </div>
+                <div class="footer-containers">
+                    <ul class="footer-ul">
+                        <h1 class="footer-h1">Contact</h1>
+                        <li class="footer-li"><a href="#" class="footer-a">Nagpur, Maharashtra</a> </li>
+                        <li class="footer-li"> <a href="#" class="footer-a">+91 9876543210</a></li>
+                        <li class="footer-li"><a href="#" class="footer-a">gloriousgift-info@gmail.com</a></li>
+                    </ul>
+                </div>
+           </div>
+        </div>
+        <div class="media-links">
+            <div class="media-link-img">
+                <img src="./../images/footer-img/github-logo.png" alt="github-logo" class="media-img">
+            </div>
+            <div class="media-link-img">
+                <img src="./../images/footer-img/instagram (1).png" alt="instagram-logo" class="media-img">
+            </div>
+            <div class="media-link-img">
+                <img src="./../images/footer-img/youtube (2).png" alt="youtube-logo" class="media-img">
+            </div>
+        </div>
+        <div class="copyrigh-sction">
+            Copyright © Glorious Gifts 2022.
+        </div>
+    </footer>
 </body>
 </html>
