--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
         <div id="navbar-logo">
-            <img src="./images/logo.jpg" alt="GLOURIOS">
+            <img src="./images/gg-type-logo.png" alt="GLOURIOS">
         </div>
         <h1>
             GLOURIOS GIFTS
@@ -32,14 +32,16 @@
         </div>
     </nav>
 
+     <!-- CATEGORIES SECTION -->
+
     <div class="categories-container">
          <div class="categories-items-container">
-            <a href="" class="categories-items">Valentine's Day</a></li>
-            <a href="" class="categories-items">Birthday</a></li>
-            <a href="" class="categories-items">Anniversary</a></li> 
-            <a href="" class="categories-items">Personalized</a></li>
-            <a href="" class="categories-items">Cakes</a></li>
-            <a href="" class="categories-items">Occasions</a></li>
+            <a href="./pages/Anniversary.html" class="categories-items">Valentine's Day</a></li>
+            <a href="./pages/birthday.html" class="categories-items">Birthday</a></li>
+            <a href="./pages/Anniversary.html" class="categories-items">Anniversary</a></li> 
+            <a href="./pages/Personalized.html" class="categories-items">Personalized</a></li>
+            <a href="./pages/Cakes.html" class="categories-items">Cakes</a></li>
+            <a href="./pages/Occasion.html" class="categories-items">Occasions</a></li>
          </div> 
 
     </div>
@@ -58,6 +60,10 @@
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <!-- FOOTER SECTION -->
+
+
     <footer>
         <div class="footer-container-main">
             <div class="row">
