--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,7 @@
 
 
         <div id="navbar-logo">
-            <img src="./../images/logo.jpg" alt="GLOURIOS">
+            <img src="./../images/gg-type-logo.png" alt="GLOURIOS">
         </div>
         <h1>
             GLOURIOS GIFTS
