--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>GLOURIOS GIFTS</title>
 </head>
 
@@ -26,7 +26,7 @@
             </form>
         </div>
         <div class="nav-items-container">
-            <a href="./index.html" class="nav-items">Home</a></li>
+            <a href="#" class="nav-items">Home</a></li>
             <a href="./pages/Aboutus.html" class="nav-items">About Us</a></li>
             <a href="./pages/login.html" class="nav-items">Log in</a></li>
         </div>
