--- a/pages/Aboutus.html
+++ b/pages/Aboutus.html
@@ -3,8 +3,31 @@
 <head>
     <title>About us</title>
     <link rel="stylesheet" href="./../css/style.css"/>
+    <link rel="stylesheet" href="./../css/index.css"/>
+    <link rel="stylesheet" href="./../css/footer.css"/>
 </head>
 <body>
+    <nav id="navbar">
+
+
+        <div id="navbar-logo">
+            <img src="./../images/gg-type-logo.png" alt="GLOURIOS">
+        </div>
+        <h1>
+            GLOURIOS GIFTS
+        </h1>
+        <div class="search-box">
+            <form>
+                <input type="text" name="search" placeholder="Search for gifts">
+            </form>
+        </div>
+        <div class="nav-items-container">
+            <a href="./../index.html" class="nav-items">Home</a></li>
+            <a href="#" class="nav-items">About Us</a></li>
+            <a href="./login.html" class="nav-items">Log in</a></li>
+        </div>
+    </nav>
+    <br/><br/><br/>
     <div class="heading">
         Our Team
     </div>
@@ -154,5 +177,66 @@
 
         </div>
     </div>
+    <br/><br/><br/><br/><br/><br/><br/>
+    <footer>
+        <div class="footer-container-main">
+            <div class="row">
+                <div class="footer-containers">
+                    <div class="foorte-logo-container">
+                        <img src="./../images/gg-type-logo.png" alt="gg-type-logo" class="footer-logo">
+                        <h1 class="footer-h1">Glorious Gift</h1>
+                    </div>
+                    
+                    <p class="footer-p"> A way of showing thoughtfulness, love and affection
+                        obcaecati.</p>
+                </div>
+                <div class="footer-containers">
+                    <ul class="footer-ul">
+                        <h1 class="footer-h1">Quick Links</h1>
+                        <li class="footer-li"><a href="./../index.html" class="footer-a">Home</a></li>
+                        <li class="footer-li"><a href="./pages/login.html" class="footer-a">Login</a></li>
+                        <li class="footer-li"><a href="./pages/Aboutus.html" class="footer-a">About</a></li>
+                        <li class="footer-li"><a href="#" class="footer-a">Contact</a></li>
+                    </ul>
+                </div>
+            
+                <div class="footer-containers">
+                    <ul class="footer-ul">
+                        <h1 class="footer-h1">Order</h1>
+                        <li class="footer-li"><a href="./Anniversary.html" class="footer-a">Anniversary Gifts</a></li>
+                        <li class="footer-li"><a href="./birthday.html" class="footer-a">Birthday Gifts</a></li>
+                        <li class="footer-li"><a href="./Occasion.html" class="footer-a">Occasion Gifts</a></li>
+                        <li class="footer-li"><a href="./Cakes.html" class="footer-a">Cakes</a></li>
+                    </ul>
+                </div>
+                <div class="footer-containers">
+                    <ul class="footer-ul">
+                        <h1 class="footer-h1">Contact</h1>
+                        <li class="footer-li"><a href="#" class="footer-a">Nagpur, Maharashtra</a> </li>
+                        <li class="footer-li"> <a href="#" class="footer-a">+91 9876543210</a></li>
+                        <li class="footer-li"><a href="#" class="footer-a">gloriousgift-info@gmail.com</a></li>
+                    </ul>
+                </div>
+           </div>
+        </div>
+        <div class="media-links">
+            <div class="media-link-img">
+                <img src="./../images/footer-img/github-logo.png" alt="github-logo" class="media-img">
+            </div>
+            <div class="media-link-img">
+                <img src="./../images/footer-img/instagram (1).png" alt="instagram-logo" class="media-img">
+            </div>
+            <div class="media-link-img">
+                <img src="./../images/footer-img/youtube (2).png" alt="youtube-logo" class="media-img">
+            </div>
+        </div>
+        <div class="copyrigh-sction">
+            Copyright © Glorious Gifts 2022.
+        </div>
+    </footer>
+
+</body>
+
+</html>
 </body>
 </html>
