--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,7 +5,7 @@
     <title>Signup Page</title>
     <link rel="stylesheet" href="./../css/signup.css">
     <link rel="stylesheet" href="./../css/index.css">
-    <link rel="stylesheet" href="/css/footer.css">  
+    <link rel="stylesheet" href="./../css/footer.css">  
 </head>
 <body>
 
@@ -101,10 +101,10 @@
                 <div class="footer-containers">
                     <ul class="footer-ul">
                         <h1 class="footer-h1">Order</h1>
-                        <li class="footer-li"><a href="./pages/Anniversary.html" class="footer-a">Anniversary Gifts</a></li>
-                        <li class="footer-li"><a href="./pages/birthday.html" class="footer-a">Birthday Gifts</a></li>
-                        <li class="footer-li"><a href="./pages/Occasion.html" class="footer-a">Occasion Gifts</a></li>
-                        <li class="footer-li"><a href="./pages/Cakes.html" class="footer-a">Cakes</a></li>
+                        <li class="footer-li"><a href="./Anniversary.html" class="footer-a">Anniversary Gifts</a></li>
+                        <li class="footer-li"><a href="./birthday.html" class="footer-a">Birthday Gifts</a></li>
+                        <li class="footer-li"><a href="./Occasion.html" class="footer-a">Occasion Gifts</a></li>
+                        <li class="footer-li"><a href="./Cakes.html" class="footer-a">Cakes</a></li>
                     </ul>
                 </div>
                 <div class="footer-containers">
