--- a/pages/Aboutus.html
+++ b/pages/Aboutus.html
@@ -99,7 +99,7 @@
         </div>
 
         <div class="card1">
-            <img src="./../images/.jpg" class="image"/><br/><br/>
+            <img src="./../images/shital.jpg" class="image"/><br/><br/>
             <b class="name">Shital Gurule</b><br/><br/>
             <p class="info">Hii! I am Shital Gurule. I am currently working in Fujitsu India Pvt ltd. Mumbai</p>
             <div class="social-contact">
@@ -125,7 +125,7 @@
 
         </div>
         <div class="card1">
-            <img src="./../images/.jpg" class="image"/><br/><br/>
+            <img src="./../images/natasha.jpg" class="image"/><br/><br/>
             <b class="name">Natasha Bagde</b><br/><br/>
             <p class="info">Hii! I am Natasha Bagde. I am currently pursuing B.E in computer science (3<sup>rd</sup> year) at Priyadarshini college of engineering, Nagpur</p>
             <div class="social-contact">
@@ -138,7 +138,7 @@
 
         </div>
         <div class="card1">
-            <img src="./../images/.jpg" class="image"/><br/><br/>
+            <img src="./../images/kalyani.jpg" class="image"/><br/><br/>
             <b class="name">Kalyani Tamboli</b><br/><br/>
             <p class="info">Hii! I am Kalyani Tamboli. I am currently pursuing MCA (final) in Raisoni college, Nagpur</p>
             <div class="social-contact">
@@ -151,12 +151,12 @@
 
         </div>
         <div class="card1">
-            <img src="./../images/.jpg" class="image"/><br/><br/>
+            <img src="./../images/ganesh.jpg" class="image size"/><br/><br/>
             <b class="name">Ganesh Bobade</b><br/><br/>
             <p class="info">Hii! I am Ganesh Bobade. Working as Process support Executive BPO at Infocept Inventive pvt ltd(US Process),Mumbai</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/ankitapawar0608" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
+                    <li><a href="https://github.com/bobadeganesh" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
                     <li><a href="https://wa.me/9325297781" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
@@ -164,7 +164,7 @@
 
         </div>        
         <div class="card1">
-            <img src="./../images/sakshi.jpg" width="70px" class="image"/><br/><br/>
+            <img src="./../images/sakshi.jpg" width="70px" class="image size"/><br/><br/>
             <b class="name">Sakshi Bhosale</b><br/><br/>
             <p class="info">Hii! I am Sakshi Bhosale. I am currently pursuing degree in computer in (3<sup>rd</sup> year) at parikrama college of engineering, Kashti</p>
             <div class="social-contact">
