--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </form>
         </div>
         <div class="nav-items-container">
-            <a href="./index.html" class="nav-items">Home</a></li>
-            <a href="./pages/Aboutus.html" class="nav-items">About Us</a></li>
-            <a href="./pages/login.html" class="nav-items">Log in</a></li>
+            <a href="./index.html" class="nav-items">Home</a>
+            <a href="./pages/Aboutus.html" class="nav-items">About Us</a>
+            <a href="./pages/login.html" class="nav-items">Log in</a>
         </div>
     </nav>
 
@@ -45,6 +45,11 @@
          </div> 
 
     </div>
+
+    <section id="home">
+
+    </section>
+
    
 
 
