--- a/pages/signup.html
+++ b/pages/signup.html
@@ -101,10 +101,10 @@
                 <div class="footer-containers">
                     <ul class="footer-ul">
                         <h1 class="footer-h1">Order</h1>
-                        <li class="footer-li"><a href="./pages/Anniversary.html" class="footer-a">Anniversary Gifts</a></li>
-                        <li class="footer-li"><a href="./pages/birthday.html" class="footer-a">Birthday Gifts</a></li>
-                        <li class="footer-li"><a href="./pages/Occasion.html" class="footer-a">Occasion Gifts</a></li>
-                        <li class="footer-li"><a href="./pages/Cakes.html" class="footer-a">Cakes</a></li>
+                        <li class="footer-li"><a href="./../pages/Anniversary.html" class="footer-a">Anniversary Gifts</a></li>
+                        <li class="footer-li"><a href="./../pages/birthday.html" class="footer-a">Birthday Gifts</a></li>
+                        <li class="footer-li"><a href="./../pages/Occasion.html" class="footer-a">Occasion Gifts</a></li>
+                        <li class="footer-li"><a href="./../pages/Cakes.html" class="footer-a">Cakes</a></li>
                     </ul>
                 </div>
                 <div class="footer-containers">
