--- a/pages/Aboutus.html
+++ b/pages/Aboutus.html
@@ -39,7 +39,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/ankitapawar0608" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8830779433" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+918830779433" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:ankitapawar0608@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
             <div class="social-contact">
                 <ul>
                     <li class="github"><a href="https://github.com/mbpatil_29" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/9518353792" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+919518353792" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:mbhongal17@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -65,7 +65,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/Maheshjadhav3329" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/9359613329" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+919359613329" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:jadhavmahesh4898@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -78,7 +78,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/harhedau" target="blank"><img class="social-media-img" src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8767487235" target="blank"><img class="social-media-img" src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+918767487235" target="blank"><img class="social-media-img" src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:" target="blank"><img class="social-media-img" src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -91,7 +91,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/harshbhange0" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/7721916040" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+917721916040" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -105,7 +105,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/shitalgurule" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/7378312207" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+917378312207" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:" target="blank"><img class="social-media-img" src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -118,7 +118,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/Pushpakparkhe" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8530455768" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+918530455768" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -131,7 +131,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/bagdenatasha2001" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8605178103" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+918605178103" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="https://github.com/ankitapawar0608" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -144,7 +144,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/KalyaniTamboli" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/7397995335" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+917397995335" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -157,7 +157,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/bobadeganesh" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/9325297781" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+919325297781" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
@@ -170,7 +170,7 @@
             <div class="social-contact">
                 <ul>
                     <li><a href="https://github.com/Sakshibhosale" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8459125755" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
+                    <li><a href="https://wa.me/+918459125755" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
                     <li><a href="mailto:sakshirb2918@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
                 </ul>
             </div>
