birthday file updated

--- a/pages/birthday.html
+++ b/pages/birthday.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/birthday.css">
+    <link rel="stylesheet" href="./../css/footer.css">
+    <link rel="stylesheet" href="./../css/index.css">
+    <link rel="stylesheet" href="./../css/birthday.css">
     <title>BIRTHDAY</title>
 </head>
 
@@ -44,11 +44,30 @@
             <a href="./../pages/Cakes.html" class="categories-items">Cakes</a></li>
             <a href="./../pages/Occasion.html" class="categories-items">Occasions</a></li>
          </div> 
-
+        </div> 
+    
+    <div class="birthday-gifts-title">Glorious Birthday Gifts for loved ones</div>
+   <div class="birthday-container">
+    <div class="birthday-img-container"><img src="./../images/birthday images/cake1.png" class="images">
+      <div class="gift-name">Fruit Cake</div> 
     </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/cake2.jfif" class="images">
+        <div class="gift-name">RedForest Cake</div> 
+    </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/cacke3.jfif" class="images">
+        <div class="gift-name">Multi Layer Cake</div> 
+    </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/cake4.jfif" class="images">
+        <div class="gift-name">Black forest Cake</div> 
+    </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/cake5.jfif" class="images">
+        <div class="gift-name">Choklate Cake</div> 
+    </div>
+   </div>
    
 
 
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
@@ -59,8 +78,6 @@
 
 
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <!-- FOOTER SECTION -->
 
