edited in login.html pages

--- a/pages/login.html
+++ b/pages/login.html
@@ -35,22 +35,25 @@
 
     <div id='login-form'>
         <div class="form-box">
-            <h2 align="center">Sign in to complete your order</h2>
-            <p align="center">Dont't have an account?<a href='signup.html'>Sign up</a></p>
-            <form id='login' class='input-group-login'>
-                <label for="ipname">Email Id*</label>
-                <br>
-                <input type='text' class='input-field' placeholder='Email Id' required>
-                <br>
-                <label for="ipname">Password*</label>
-                <br>
-                <input type='password' class='input-field' placeholder='Enter Password' required>
-                <input type='checkbox' class='check-box'><span>Remember Password</span>
-                <button type='submit' class='submit-btn'>Log in</button>
-                <a id="login-forget-password" href='#'>Forgot Password?</a>
-            </form>
+          <h2 align="center">Sign in to complete your order</h2>
+          <p align="center">Dont't have an account?<a href='signup.html'>Sign up</a></p>
+              <form id='login' class='input-group-login'>
+                  <!-- <label for="ipname">Email Id*</label> -->
+                  <br>
+                  <input type='text'class='input-field'placeholder='Email Id' required >
+                  <br>
+                  <!-- <label for="ipname">Password*</label> -->
+                  <br>
+                  <input type='password'class='input-field'placeholder='Enter Password' required>
+              
+                  <input type='checkbox'class='check-box' value="Remember Password"><span>Remember Password</span>
+                 <br><br>
+                  <button type='submit'class='submit-btn'>Log in</button>
+                  <a id="login-forget-password" href='#'>Forget Password?</a>
+              </form>
         </div>
     </div>
+  </div>
     
 
 
