--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+
+
+
     <title>GLOURIOS GIFTS</title>
 </head>
 
@@ -26,15 +31,10 @@
             </form>
         </div>
         <div class="nav-items-container">
-<<<<<<< HEAD
             <a href="./index.html" class="nav-items">Home</a>
             <a href="./pages/Aboutus.html" class="nav-items">About Us</a>
             <a href="./pages/login.html" class="nav-items">Log in</a>
-=======
-            <a href="#" class="nav-items">Home</a></li>
-            <a href="./pages/Aboutus.html" class="nav-items">About Us</a></li>
-            <a href="./pages/login.html" class="nav-items">Log in</a></li>
->>>>>>> 6fcd4ed3e8590981e4227949d5ba3738fcd759e2
+
         </div>
     </nav>
 
