final birthday page

--- a/pages/birthday.html
+++ b/pages/birthday.html
@@ -47,29 +47,85 @@
         </div> 
     
     <div class="birthday-gifts-title">Glorious Birthday Gifts for loved ones</div>
+    <!--first row-->
    <div class="birthday-container">
-    <div class="birthday-img-container"><img src="./../images/birthday images/cake1.png" class="images">
-      <div class="gift-name">Fruit Cake</div> 
+    <div class="birthday-img-container"><img src="./../images/birthday images/1_Tasteful  Birthday Gift Hamper.jpg" class="images">
+      <div class="gift-name">Tasteful  Birthday Gift Hamper</div> 
+      <div class="BuyNow">Buy Now</div>
     </div>
-    <div class="birthday-img-container"><img src="./../images/birthday images/cake2.jfif" class="images">
-        <div class="gift-name">RedForest Cake</div> 
+    <div class="birthday-img-container"><img src="./../images/birthday images/2_Sunshine yellow Blossoms.jpg" class="images">
+        <div class="gift-name">Sunshine yellow Blossoms</div> 
+        <div class="BuyNow">Buy Now</div>
     </div>
-    <div class="birthday-img-container"><img src="./../images/birthday images/cacke3.jfif" class="images">
-        <div class="gift-name">Multi Layer Cake</div> 
+    <div class="birthday-img-container"><img src="./../images/birthday images/3_Blossoms from heaven.jpg" class="images">
+        <div class="gift-name">Blossoms from heaven</div> 
+        <div class="BuyNow">Buy Now</div>
     </div>
-    <div class="birthday-img-container"><img src="./../images/birthday images/cake4.jfif" class="images">
-        <div class="gift-name">Black forest Cake</div> 
+    <div class="birthday-img-container"><img src="./../images/birthday images/4_opulent Orchid Bouquet.jpg" class="images">
+        <div class="gift-name">opulent Orchid Bouquet</div> 
+        <div class="BuyNow">Buy Now</div>
+    </div> 
+</div> 
+<!--second row-->
+<div class="birthday-container">
+    <div class="birthday-img-container"><img src="./../images/birthday images/5_purpole orchid & Pink roses.jpg" class="images">
+      <div class="gift-name">purpole orchid & Pink roses</div> 
+      <div class="BuyNow">Buy Now</div>
     </div>
-    <div class="birthday-img-container"><img src="./../images/birthday images/cake5.jfif" class="images">
-        <div class="gift-name">Choklate Cake</div> 
+    <div class="birthday-img-container"><img src="./../images/birthday images/6_A Royal Affair.jpg" class="images">
+        <div class="gift-name">A Royal Affair</div> 
+        <div class="BuyNow">Buy Now</div>
     </div>
-   </div>
-   
+    <div class="birthday-img-container"><img src="./../images/birthday images/9_Bounty of brown & Pink Love.jpg" class="images">
+        <div class="gift-name">Bounty of brown & Pink Love</div> 
+        <div class="BuyNow">Buy Now</div>
+    </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/10_Red Rosses in Basket with Cute Teddy.jpg" class="images">
+        <div class="gift-name">Red Rosses in Basket with Cute Teddy</div> 
+        <div class="BuyNow">Buy Now</div> 
+    </div> 
+</div> 
+    <!--third row-->
+    <div class="birthday-container">
+        <div class="birthday-img-container"><img src="./../images/birthday images/7_ Sway Me Pink.jpg" class="images">
+          <div class="gift-name">Sway Me Pink</div> 
+          <div class="BuyNow">Buy Now</div>
+        </div>
+        <div class="birthday-img-container"><img src="./../images/birthday images/8_Nuts About Your Gift Hamper.jpg" class="images">
+            <div class="gift-name">Nuts About Your Gift Hamper</div> 
+            <div class="BuyNow">Buy Now</div>
+        </div>
+        <div class="birthday-img-container"><img src="./../images/birthday images/11_Choc'O Nuts Dwluxe Hamper.jpg" class="images">
+            <div class="gift-name">Choc'O Nuts Deluxe Hamper</div> 
+            <div class="BuyNow">Buy Now</div>
+        </div>
+        <div class="birthday-img-container"><img src="./../images/birthday images/12_Elegant truffle Cake with Red Rosses.jpg" class="images">
+            <div class="gift-name">Elegant truffle Cake with Red Rosses</div> 
+            <div class="BuyNow">Buy Now</div>
+    </div> 
+</div> 
+<!--forth row-->
+<div class="birthday-container">
+    <div class="birthday-img-container"><img src="./../images/birthday images/13_Wine it down with Roses.jpg" class="images">
+      <div class="gift-name">Wine it down with Roses</div> 
+      <div class="BuyNow">Buy Now</div>
+    </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/13_Lucky Bamboo In Mini Bowl Glass Vase.jpg" class="images">
+        <div class="gift-name">Lucky Bamboo In Mini Bowl Glass Vase</div> 
+        <div class="BuyNow">Buy Now</div>
+    </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/14_Jade Plant in Classy Planter.jpg" class="images">
+        <div class="gift-name">Jade Plant in Classy Planter</div> 
+        <div class="BuyNow">Buy Now</div>
+    </div>
+    <div class="birthday-img-container"><img src="./../images/birthday images/mug2.webp" class="images">
+        <div class="gift-name">Cofee Mug </div> 
+        <div class="BuyNow">Buy Now</div>
+</div> 
+</div> 
 
 
-   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-
+   <br><br><br><br><br><br><br><br>
 
 
 
@@ -87,7 +143,7 @@
             <div class="row">
                 <div class="footer-containers">
                     <div class="foorte-logo-container">
-                        <img src="./images/gg-type-logo.png" alt="gg-type-logo" class="footer-logo">
+                        <img src="./../images/gg-type-logo.png" alt="gg-type-logo" class="footer-logo">
                         <h1 class="footer-h1">Glorious Gift</h1>
                     </div>
                     
