new section added

--- a/index.html
+++ b/index.html
@@ -38,25 +38,46 @@
         </div>
     </nav>
 
-     <!-- CATEGORIES SECTION -->
+    <!-- CATEGORIES SECTION -->
 
     <div class="categories-container">
-         <div class="categories-items-container">
+        <div class="categories-items-container">
             <a href="./pages/Anniversary.html" class="categories-items">Valentine's Day</a></li>
             <a href="./pages/birthday.html" class="categories-items">Birthday</a></li>
-            <a href="./pages/Anniversary.html" class="categories-items">Anniversary</a></li> 
+            <a href="./pages/Anniversary.html" class="categories-items">Anniversary</a></li>
             <a href="./pages/Personalized.html" class="categories-items">Personalized</a></li>
             <a href="./pages/Cakes.html" class="categories-items">Cakes</a></li>
             <a href="./pages/Occasion.html" class="categories-items">Occasions</a></li>
-         </div> 
+        </div>
 
     </div>
+
+    <!-- HOME SECTION -->
+
 
     <section id="home">
 
     </section>
 
-   
+    <!-- UNIQUE GIFTS SECTION -->
+
+    <div class="unique-gift-container">
+        <div class="unique-gift-text-img-container">
+            <img src="./images/gifts.png" alt="gifts" class="unique-gift-img">
+            <div class="unique-gift-text">
+                Unique Gifts Online
+                Curated to make every special moment a celebration
+            </div>
+        </div>
+        <img src="./images/simpl_d_igp_illustration_20230204.webp" alt="" class="unique-gift-container-bigimage">
+
+    </div>
+
+
+
+
+
+
 
 
 
@@ -83,7 +104,7 @@
                         <img src="./images/gg-type-logo.png" alt="gg-type-logo" class="footer-logo">
                         <h1 class="footer-h1">Glorious Gift</h1>
                     </div>
-                    
+
                     <p class="footer-p"> A way of showing thoughtfulness, love and affection
                         obcaecati.</p>
                 </div>
@@ -96,11 +117,12 @@
                         <li class="footer-li"><a href="#" class="footer-a">Contact</a></li>
                     </ul>
                 </div>
-            
+
                 <div class="footer-containers">
                     <ul class="footer-ul">
                         <h1 class="footer-h1">Order</h1>
-                        <li class="footer-li"><a href="./pages/Anniversary.html" class="footer-a">Anniversary Gifts</a></li>
+                        <li class="footer-li"><a href="./pages/Anniversary.html" class="footer-a">Anniversary Gifts</a>
+                        </li>
                         <li class="footer-li"><a href="./pages/birthday.html" class="footer-a">Birthday Gifts</a></li>
                         <li class="footer-li"><a href="./pages/Occasion.html" class="footer-a">Occasion Gifts</a></li>
                         <li class="footer-li"><a href="./pages/Cakes.html" class="footer-a">Cakes</a></li>
@@ -114,7 +136,7 @@
                         <li class="footer-li"><a href="#" class="footer-a">gloriousgift-info@gmail.com</a></li>
                     </ul>
                 </div>
-           </div>
+            </div>
         </div>
         <div class="media-links">
             <div class="media-link-img">
